Criação da activity para exibir o gráfico.

--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SINE</string>
+    <string name="label_grafico">Média Salárial dos Profissionais</string>
 </resources>
