--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="search">Pesquisar</string>
     <string name="search_vaga">Pesquisar Vagas</string>
     <string name="favorite_vaga">Vagas Favoritas</string>
+    <string name="conexao_infor">Você deve estar conectado...</string>
 </resources>
