--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -1,5 +1,25 @@
 <resources>
     <string name="app_name">SINE</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
+    <string name="nav_item_home">Home</string>
+    <string name="nav_item_friends">Pesquisar Vagas</string>
+    <string name="nav_item_notifications">Vagas Favoritas</string>
+
+    <!-- navigation drawer item labels  -->
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
+        <item>@string/nav_item_friends</item>
+        <item>@string/nav_item_notifications</item>
+    </string-array>
+
+    <string name="title_messages">Pesquisar Vagas</string>
+    <string name="title_friends">Pesquisar Vagas</string>
+    <string name="title_home">Home</string>
+
 
     <!-- Tela geração de gráfico -->
     <string name="label_grafico">Média Salárial dos Profissionais</string>
@@ -15,4 +35,7 @@
     <string name="search_vaga">Pesquisar Vagas</string>
     <string name="favorite_vaga">Vagas Favoritas</string>
     <string name="conexao_infor">Você deve estar conectado...</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
