Correção da tela de pesquisa por cargo.

--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="nav_item_home">Home</string>
     <string name="nav_item_friends">Pesquisar Vagas</string>
     <string name="nav_item_notifications">Vagas Favoritas</string>
+    <string name="nav_item_search_payment">Médias Saláriais</string>
 
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
