--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -58,6 +58,6 @@
     <string name="toast_msg_adapter_list_desfavoritado">Desfavoritado!!!</string>
 
     <!-- About view -->
-    <string name="about_app">Desenvolvido pelos alunos do 6º Período do Curso Superior de Tecnologia em Sistemas para Internet</string>
+    <string name="about_app">Desenvolvido pelos formandos do 6º Período do Curso Superior de Tecnologia em Sistemas para Internet, no ano de 2016.</string>
     <string name="version">Versão 1.1</string>
 </resources>
