--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <!-- About view -->
     <string name="about_app">Desenvolvido pelos formandos do 6º Período do Curso Superior de Tecnologia em Sistemas para Internet, no ano de 2016.</string>
     <string name="version">Versão 1.1</string>
+
+    <string name="campo_cargo_vazio">Por favor, preencha o seu cargo e tente novamente.</string>
 </resources>
