--- a/app/SINE/app/src/main/res/values/strings.xml
+++ b/app/SINE/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="toast_msg_result_activity_desfavoritado">Desfavoritado!!!</string>
     <string name="toast_msg_adapter_list_favoritado">Favoritado!!!</string>
     <string name="toast_msg_adapter_list_desfavoritado">Desfavoritado!!!</string>
-    
+
     <string name="dialog_infor">Carregando dados</string>
     <string name="positive_button">OK</string>
     <string name="negative_button">Resetar</string>
@@ -69,7 +69,9 @@
     <string name="alert_dialog_title">Escolha o filtro?</string>
 
     <!-- About view -->
-    <string name="about_app">Desenvolvido pelos formandos do 6º Período do Curso Superior de Tecnologia em Sistemas para Internet, no ano de 2016.</string>
+    <string name="about_app">Aplicação não oficial do website SINE - Site Nacional de Empregos. \n
+        Desenvolvido pelos formandos do 6º Período do Curso Superior de Tecnologia em Sistemas para
+        Internet, no ano de 2016.s</string>
     <string name="version">Versão 1.1</string>
 
     <string name="campo_cargo_vazio">Por favor, digite um nome de cargo válido e tente novamente.</string>
